# Anagrams

./: .gitignore  .nvim.lua  Anagrams.pro  CMakeLists.txt  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  main.cpp  resource.qrc
resources/: rus_dictionary
